--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@mantine/core": "^8.3.5",
     "@mantine/hooks": "^8.3.5",
+    "@mui/material": "^7.3.5",
     "@tanstack/react-query": "^5.90.2",
     "next": "15.5.4",
     "react": "19.1.0",
