--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.1",
     "@mantine/core": "^8.3.5",
     "@mantine/hooks": "^8.3.5",
+    "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
     "@tanstack/react-query": "^5.90.2",
     "next": "15.5.4",
